Bug 1979014 - Make some XUL attributes (hidden/collapsed/autofocus) regular bool attributes. r=dao,desktop-theme-reviewers,credential-management-reviewers,devtools-reviewers,tabbrowser-reviewers,places-reviewers,nchevobbe,search-reviewers,daleharvey,dimi
I audited a bit and non-test things use the script setter, which already
removed the attribute, so should be fine / no behavior change in that
regard.

Tab groups used the collapsed attribute for different purposes, so that
took a bit of digging.

This came up while reviewing some code for the native menubar code on
Linux, which uses SetBoolAttr() and doesn't hide the menubar now:

  https://searchfox.org/mozilla-central/rev/86878e73a24fe32ea09dbae5b55362efaf7485c8/widget/gtk/NativeMenuGtk.cpp#770,785,790

That is disabled by default tho.

Differential Revision: https://phabricator.services.mozilla.com/D258543

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -288,7 +288,7 @@ body {
     }
   }
 
-  #toolbar-menubar[autohide="true"]:not([inactive]) ~ :is(#TabsToolbar, #nav-bar) > & {
+  #toolbar-menubar[autohide]:not([inactive]) ~ :is(#TabsToolbar, #nav-bar) > & {
     visibility: hidden;
   }
 
@@ -344,7 +344,7 @@ body {
  * (That is, if the menu bar doesn't autohide, and we're not in a fullscreen or
  * popup window.) */
 :root:not([chromehidden~="menubar"], [inFullscreen])
-  #toolbar-menubar[autohide="false"]
+  #toolbar-menubar:not([autohide])
   ~ :is(#TabsToolbar, #nav-bar)
   > :is(.titlebar-buttonbox-container, .titlebar-spacer) {
   display: none;
@@ -373,7 +373,7 @@ body {
 /* Menu bar */
 
 #toolbar-menubar {
-  &[autohide="true"] {
+  &[autohide] {
     overflow: hidden;
 
     /* For linux and windows, when temporarily showing the menu bar, make it at least
@@ -395,10 +395,6 @@ body {
       padding: 0 !important;
       appearance: none !important;
     }
-  }
-
-  &:not([autohide]) {
-    visibility: collapse;
   }
 }
 
@@ -484,7 +480,7 @@ body {
       max-height 170ms ease-out,
       var(--ext-theme-background-transition);
 
-    &[collapsed="true"] {
+    &[collapsed] {
       transition:
         min-height 170ms ease-out,
         max-height 170ms ease-out,
@@ -492,7 +488,7 @@ body {
     }
   }
 
-  &[collapsed="true"] {
+  &[collapsed] {
     max-height: 0;
 
     &.instant {
@@ -503,7 +499,7 @@ body {
   /* Bookmarks toolbar empty message */
 
   /* If the toolbar is not initialized set a zero width, but retain height. */
-  &[collapsed="false"]:not([initialized]) > #personal-toolbar-empty {
+  &:not([collapsed], [initialized]) > #personal-toolbar-empty {
     visibility: hidden;
     width: 0;
     overflow-x: hidden;
