--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -1119,6 +1119,8 @@ tab-group {
 
   &[collapsed] {
     --tab-group-line-color: light-dark(var(--tab-group-color), var(--tab-group-color-pale));
+    /* Override xul.css, we're using the collapsed attribute for our own purposes */
+    visibility: inherit;
   }
 }
 
